[security-utils] remove a dependency on java.xml.bind